/*
 * Copyright (C) 2020 bsyonline
 */
package com.rolex.alphax.structural.adapter.classadapter;

import java.util.Map;

/**
 * @author rolex
 * @since 2020
 */
public interface IOuterUserInfo {
    Map basicInfo();

    Map technicalInfo();
}
