/*
 * Copyright (C) 2020 bsyonline
 */
package com.rolex.alphax.structural.adapter.classadapter;

/**
 * @author rolex
 * @since 2020
 */
public interface IUserInfo {
    String getName();

    Integer getAge();

    String getTechnical();
}
